k8s/app/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: cab-booking-ingress
  namespace: cab-booking

spec:
  ingressClassName: nginx

  rules:
    - http:

        paths:

          - path: /
            pathType: Prefix

            backend:
              service:
                name: client

                port:
                  number: 80

          - path: /api
            pathType: Prefix

            backend:
              service:
                name: server

                port:
                  number: 5005
